issue with the header image getting a height of 0 when on a small screen

--- a/src/components/LoadingScreen/LoadingScreen.module.css
+++ b/src/components/LoadingScreen/LoadingScreen.module.css
@@ -30,7 +30,7 @@
 .MoveScreenUpTwo {
   left: calc(100vw * 2 / 5);
   background-color: black;
-  background-image: url('../../../public/MiamiLogo.svg');
+  background-image: url('/src/images/MiamiLogo.svg');
   background-repeat: no-repeat;
   background-position: center;
 }
