--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -5,9 +5,9 @@
   background-repeat: no-repeat;
 }
 
-@media (max-width: 640px) {
+/* @media (max-width: 640px) {
   .divImage {
     width: 100%;
     height: 100%;
   }
-}
+} */
