--- a/src/pages/AboutPage/AboutPage.module.css
+++ b/src/pages/AboutPage/AboutPage.module.css
@@ -53,7 +53,7 @@
   height: 100%;
   width: 100%;
   display: flex;
-  flex-wrap: wrap;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   margin: 0 10px 0 10px;
@@ -73,40 +73,20 @@
   pointer-events: none;
 }
 
-.cardHalf {
-  /* width: 45%; */
-
-  /* margin: 5px; */
-  background-color: transparent;
-  /* height: 10%; */
-  opacity: 1;
-  padding: 5px;
-  /* height: 100%; */
-  font-size: 1.5rem;
-  font-weight: bold;
-}
-.cardHalfContent {
-  border: solid 1px white;
-}
-
-.cardOneFourth {
-  width: 23%;
-  border: solid 1px white;
-}
-
-.cardThreeFourth {
-  width: 73%;
-  margin: 0 2%;
-  border: solid 1px white;
-}
-
-.cardRowHalf {
+.AboutCard {
   display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: space-between;
+  flex-direction: column;
   align-items: center;
-  width: 100%;
-  height: 10%;
-  /* contain: strict; */
+  width: 75%;
+  background: black;
+  opacity: 1;
+  border: 1px solid white;
+  padding: 10px;
+  border-radius: 5px;
+}
+.CardBtnContainer {
+  display: flex;
+  width: 10%;
+  justify-content: space-around;
+  margin-top: 1rem;
 }
