--- a/src/pages/HomePage/HomePage.module.css
+++ b/src/pages/HomePage/HomePage.module.css
@@ -1,3 +1,11 @@
+@font-face {
+  font-family: 'LUMANEON';
+  src: url('../../Fonts/LUMANEON.woff2') format('woff2'),
+    /* Modern Browsers */ url('../../Fonts/LUMANEON-SVG.otf') format('opentype'); /* Safari, Android, iOS */
+  font-style: normal;
+  font-weight: normal;
+  text-rendering: optimizeLegibility;
+}
 :root {
   --highlightColor: #03ffab;
   --accentColor: #ff3ce6;
@@ -26,13 +34,15 @@
 }
 
 .innerText {
-  font-size: clamp(3rem, 3vw, 4rem);
+  font-size: clamp(4rem, 4vw, 5rem);
   text-align: center;
   margin: 3px;
   font-weight: bold;
-  color: rgba(104, 93, 93, 0.75);
-  text-shadow: 0px 0px 1rem var(--accentColor);
-  -webkit-text-stroke: 2px var(--highlightColor);
+  /* color: rgba(104, 93, 93, 0.75); */
+  text-shadow: 0px 0px 1rem var(--highlightColor);
+  color: var(--highlightColor);
+  /* -webkit-text-stroke: 2px var(--highlightColor); */
+  font-family: 'LUMANEON', sans-serif;
 }
 
 .MiddleContainer {
@@ -148,7 +158,7 @@
   -webkit-text-stroke: #03ffab 0.5px;
   letter-spacing: 2px;
   font-size: clamp(1.5rem, 2vw, 2.5rem);
-  width: 80%;
+  width: fit-content;
 }
 
 .ButtonHide:hover {
@@ -157,8 +167,9 @@
 
 .listItem {
   font-size: clamp(1.15rem, 2.85vw, 3rem);
-  color: rgba(104, 93, 93, 0.75);
-  text-shadow: 0px 0px 1rem var(--accentColor);
+  /* color: rgba(104, 93, 93, 0.75); */
+  text-shadow: 0px 0px 1.5rem var(--accentColor);
+  font-family: 'LUMANEON', sans-serif;
 }
 
 .listItemActive {
@@ -166,6 +177,7 @@
   font-size: clamp(1.5rem, 2vw, 2.5rem);
   text-shadow: 0 0 1rem var(--highlightColor);
   padding: 5px;
+  font-family: 'LUMANEON', sans-serif;
 }
 
 .MiddleRightTitle {
@@ -176,4 +188,5 @@
   letter-spacing: 2px;
   margin: 0;
   padding: 5px;
+  font-family: 'LUMANEON', sans-serif;
 }
