--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,9 +1,9 @@
-.divImage {
+/* .divImage {
   background-image: url('../../images/MiamiLogo.svg');
   height: 100%;
   background-size: contain;
   background-repeat: no-repeat;
-}
+} */
 
 /* @media (max-width: 640px) {
   .divImage {
@@ -11,3 +11,115 @@
     height: 100%;
   }
 } */
+@font-face {
+  font-family: 'LUMANEON';
+  src: url('../../Fonts/LUMANEON.woff2') format('woff2'),
+    url('../../Fonts/LUMANEON-SVG.otf') format('opentype');
+  font-style: normal;
+  font-weight: normal;
+  text-rendering: optimizeLegibility;
+}
+
+header {
+  width: 100vw;
+
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  min-height: 100px;
+  border-bottom: solid 2px #57736a;
+  padding: 0 1rem;
+}
+.headerL {
+  width: 25%;
+}
+.headerL > h4 {
+  font-size: clamp(1.5rem, 3vw, 3rem);
+  font-family: serif;
+}
+.headerL > h4 > span {
+  color: var(--highlightColor);
+}
+.headerR {
+  display: flex;
+  width: 75%;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
+  font-family: 'Oswald', sans-serif;
+  font-size: 2rem;
+  color: #515957;
+}
+.btnHolder > button {
+  color: var(--accentColor);
+}
+nav {
+  position: relative;
+}
+.NBLinkContainer {
+  position: absolute;
+  top: 155%;
+  left: 25%;
+  text-align: center;
+  background-color: black;
+  border-radius: 5px;
+  border: solid 2px #57736a;
+}
+.menuIcon {
+  text-align: center;
+  width: 80%;
+  transform: translateX(23%);
+  cursor: pointer;
+}
+.headerR a:hover {
+  color: #fff;
+}
+.btnHolder > button:hover {
+  animation: beat 0.5s infinite;
+}
+@keyframes beat {
+  0% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(1.2);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+@media (max-width: 600px) {
+  .headerR {
+    width: 25%;
+  }
+  .headerL {
+    width: 75%;
+  }
+  .headerL > h4 {
+    font-size: 2.5rem;
+  }
+
+  .headerR.show-menu {
+    display: flex;
+  }
+
+  .headerR a {
+    padding: 5px;
+    text-align: center;
+    width: 100%;
+    display: block;
+    border-bottom: 1px solid #ccc;
+    text-decoration: none;
+    color: #333;
+  }
+  .headerR a:hover {
+    background-color: #50615b;
+    color: #fff;
+  }
+
+  .headerR button {
+    margin-top: 10px;
+    color: var(--accentColor);
+  }
+}
