--- a/src/pages/AboutPage/AboutPage.module.css
+++ b/src/pages/AboutPage/AboutPage.module.css
@@ -1,155 +1,243 @@
+@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@300&family=Tilt+Neon&display=swap');
+
+@font-face {
+  font-family: 'LUMANEON';
+  src: url('../../Fonts/LUMANEON.woff2') format('woff2'),
+    url('../../Fonts/LUMANEON-SVG.otf') format('opentype');
+  font-style: normal;
+  font-weight: normal;
+  text-rendering: optimizeLegibility;
+}
+
+:root {
+  --highlightColor: #03ffab;
+  --accentColor: #ff3ce6;
+  --opacityHighlight: rgba(3, 255, 171, 0.5);
+}
 .AboutMain {
-  height: 100vh;
-  width: 100vw;
-  margin: 0;
-  overflow: hidden;
-  contain: strict;
-}
-
-.AboutBody {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-.ProfileCard {
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+.AboutSection {
+  display: flex;
+  flex-direction: column;
   justify-content: center;
-  width: calc(100vw / 3);
+  align-items: center;
+  width: 70%;
   padding: 1rem;
-  border-radius: 0.5rem;
-  box-shadow: 0 0 0.5rem rgba(0, 0, 0, 0.2);
-  transition: all 0.3s ease-in-out;
-  border: solid 1px white;
-  margin-top: 10%;
-  margin-left: 5%;
 }
-
-.ProfileImgContainer {
-  height: 20%;
-  width: 50%;
-  border-radius: 50%;
-  /* background-image: url('../../images/profile-pic.png');
-  background-size: cover;
-  background-position: center; */
-  transform: translate(0, -50%);
-}
-.ProfileImg {
-  height: 75%;
-  width: 100%;
-  border-radius: 50%;
-  object-fit: scale-down;
-}
-
-.ProfileCardText {
-  height: 90%;
+.Banner {
+  width: 100vw;
+  /* background-color: #110810; */
   display: flex;
-  align-items: center;
-  text-align: center;
-  transform: translate(0, -15%);
-}
-.AboutRight {
-  height: 100%;
-  width: 100%;
-  display: flex;
-  flex-direction: column;
+  min-height: 10vh;
   justify-content: center;
   align-items: center;
-  margin: 0 10px 0 10px;
+}
+.rmvBtn {
+  font-size: clamp(3rem, 5vw, 5rem);
+  font-family: 'Oswald', sans-serif;
+  font-size: bold;
+  letter-spacing: 0.2rem;
+  word-spacing: 0.5rem;
+  border: solid 2px black;
+  background-color: var(--accentColor);
+  border-radius: 5px;
+  height: 90%;
   padding: 5px;
-  position: relative;
+  box-shadow: 2px 2px 1rem var(--highlightColor);
+}
+.rmvBtn:hover {
+  cursor: pointer;
+  background-color: var(--highlightColor);
+  color: black;
+  box-shadow: 2px 2px 1rem var(--accentColor);
+}
+.AboutSectionTitle,
+.AboutSectionTitleR {
+  font-family: 'LUMANEON', sans-serif;
+  font-size: clamp(2.75rem, 4vw, 4rem);
+  font-weight: bolder;
+  color: var(--opacityHighlight);
+  /* text-shadow: 0px 0px 1rem var(--accentColor); */
+  animation: blinking 1s forwards;
+  letter-spacing: 0.25rem;
+  width: 100%;
+}
+.AboutSectionTitleR {
+  text-align: end;
+}
+.AboutSectionTitle {
+  text-align: start;
 }
 
-.AboutRBg {
-  background-image: url('../../images/MiamiLogo.svg');
-  background-size: contain;
-  background-repeat: no-repeat;
-  background-position: center;
-  position: absolute;
-  height: 80vh;
-  width: 80vw;
-  opacity: 0.15;
-  pointer-events: none;
-}
-
-.AboutCardComeInR {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  width: 75%;
-  background: black;
-  opacity: 1;
-  border: 1px solid white;
-  padding: 10px;
-  border-radius: 5px;
-  animation: comeInR 1.5s ease-in forwards;
-  animation-delay: 1s;
-  z-index: 1;
-}
-@keyframes comeInR {
+@keyframes blinking {
   0% {
-    transform: translateX(100%);
+    opacity: 1;
+    color: white;
   }
-  100% {
-    transform: translateX(0);
+  25% {
+    opacity: 0;
   }
-}
-.AboutCardComeInL {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  width: 75%;
-  background: black;
-  opacity: 1;
-  border: 1px solid white;
-  padding: 10px;
-  border-radius: 5px;
-  animation: comeInL 1.5s ease-in forwards;
-  animation-delay: 1s;
-  z-index: 1;
-}
-@keyframes comeInR {
-  0% {
-    transform: translateX(-100%);
+  30% {
+    opacity: 1;
+    color: var(--opacityHighlight);
+  }
+  50% {
+    opacity: 0;
+  }
+  70% {
+    opacity: 1;
+    color: var(--opacityHighlight);
+  }
+  75% {
     opacity: 0;
   }
   100% {
-    transform: translateX(0);
+    opacity: 1;
+    color: var(--highlightColor);
+    text-shadow: 0px 0px 1rem var(--highlightColor);
   }
 }
+.Hide {
+  color: #576a64;
+}
+.Hide:hover {
+  cursor: pointer;
+}
 
-.AboutCardStayL {
+.ASGroup {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  width: 100%;
+}
+.ASGContainerL,
+.ASGContainerR {
+  width: 100%;
+  padding: 1rem;
+}
+.ASGContainerR {
+  text-align: end;
+  /* background: blue; */
+  width: 100%;
+  border-top: solid 1px #464145;
+  border-bottom: solid 1px #464145;
+  margin: 10px 0;
+}
+.AGroupContainer {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  min-width: 100%;
+}
+/* .Skill > h3,
+.SkillR > h3, */
+.AGroupContainer > h3 {
+  /* font-family: 'LUMANEON', sans-serif; */
+  font-size: clamp(1.5rem, 2.25vw, 2.75rem);
+  letter-spacing: 0.1rem;
+  font-family: serif;
+  text-decoration: underline 5px var(--opacityHighlight);
+  /* text-shadow: 0px 0px 1rem var(--highlightColor); */
+}
+
+.SkillCard {
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 75%;
-  background: black;
-  opacity: 1;
-  border: 1px solid white;
-  padding: 10px;
-  border-radius: 5px;
-  animation: stayL 1s ease-in forwards;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  justify-content: center;
+  padding: 1.5rem;
+  max-height: 400px;
+  /* border: white solid 1px; */
+  max-width: 30vw;
+  min-width: 20vw;
+  /* background-color: #292628; */
 }
-@keyframes stayL {
-  0% {
-    left: 50%;
-    z-index: 0;
-  }
-  100% {
-    left: -1000%;
-    opacity: 0;
-    width: 0;
-  }
+.skillList,
+.skillImage {
+  /* width: 100%; */
+  /* height: 50%; */
+  text-align: center;
+}
+.skillList {
+  height: 15%;
+}
+.skillImage {
+  height: 85%;
+  display: flex;
+  justify-content: center;
+}
+.skillImage > img {
+  object-fit: contain;
+  max-height: 100%;
+  max-width: 100%;
 }
 
-.CardBtnContainer {
+.skillName {
+  font-size: clamp(1rem, 3vw, 4rem);
+  font-family: 'Oswald', sans-serif;
+  letter-spacing: 0.2rem;
+  width: 100%;
+  /* align-self: flex-end; */
+  /* width: 50%; */
+}
+.SkillCardContainer {
   display: flex;
-  width: 10%;
+  flex-direction: row;
+  flex-wrap: wrap;
   justify-content: space-around;
-  margin-top: 1rem;
+  align-items: space-around;
+  gap: 1rem;
+  padding: 1rem 0;
+}
+.ASGTextContainer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  width: 100%;
+}
+.ASGText,
+.ASGTextMin {
+  font-size: clamp(1rem, 2vw, 2rem);
+  font-family: 'Oswald', sans-serif;
+  letter-spacing: 0.15rem;
+  word-spacing: 0.25rem;
+  text-align: start;
+  width: 80%;
+  color: #e1f2ec;
+  padding: 5px;
+  /* text-shadow: 0px 0px 1rem var(--highlightColor); */
+}
+.backToTop {
+  text-align: center;
+  margin-bottom: 1rem;
+}
+
+@media all and (max-width: 375px) {
+  .SkillCard:nth-of-type(3) > .skillList > .skillName,
+  .SkillCard:nth-of-type(6) > .skillList > .skillName {
+    /* font-size: 1.25rem; */
+    text-align: start;
+  }
+  .SkillCard {
+    width: 100%;
+    max-width: 100%;
+    max-height: 150px;
+  }
+  .AboutSectionTitle,
+  .AboutSectionTitleR {
+    text-align: center;
+  }
+}
+@media (max-width: 912px) {
+  .skillName {
+    font-family: 'Oswald', sans-serif;
+    font-size: clamp(0.75rem, 2rem, 2rem);
+  }
+  .ASGText {
+    word-spacing: 0.1rem;
+  }
 }
