--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -65,6 +65,7 @@ nav {
   background-color: black;
   border-radius: 5px;
   border: solid 2px #57736a;
+  z-index: 5;
 }
 .menuIcon {
   text-align: center;
