--- a/src/pages/ProjectsPage/ProjectsPage.module.css
+++ b/src/pages/ProjectsPage/ProjectsPage.module.css
@@ -14,15 +14,31 @@
 }
 
 .ProjectMain {
-  height: 100vh;
-  width: 100vw;
   margin: 0;
   overflow: hidden;
-  contain: strict;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.ProjectContainer::-webkit-scrollbar,
+.ProjectMain::-webkit-scrollbar {
+  display: none;
+}
+.ProjectContainer {
+  display: flex;
+  overflow: hidden;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  width: 90%;
 }
 
 .ProjectSection {
-  height: 78%;
+  overflow-y: auto;
+  height: 100%;
+  width: 100%;
   display: grid;
   gap: 1rem;
   grid-template-areas:
@@ -33,7 +49,10 @@
   grid-template-rows: repeat(4, 25%);
   grid-template-columns: 18% 30% 30% 18%;
   padding: 1rem;
-  margin-top: 10px;
+  /* margin-top: 10px; */
+}
+.ProjectSection::-webkit-scrollbar {
+  display: none;
 }
 
 .ProjectSection > div {
@@ -103,9 +122,9 @@
   transform: scale(1.02);
 }
 .img2 {
-  background-image: url('../../images/HammerLogin.png');
+  background-image: url('../../images/willdo.png');
   background-size: cover;
-  background-position: center;
+  background-position: center top;
   filter: grayscale(100%);
 }
 .img2 ~ h3,
@@ -116,7 +135,7 @@
   grid-area: c;
 }
 .img3 {
-  background-image: url('../../images/slideshow.png');
+  background-image: url('../../images/HammerLogin.png');
   opacity: 0.75;
   filter: grayscale(100%);
 }
@@ -183,7 +202,7 @@
   align-items: center;
 }
 .ProjectMainTitle {
-  font-size: clamp(3rem, 4vw, 4rem);
+  font-size: clamp(2rem, 4vw, 4rem);
   font-weight: bolder;
   text-align: center;
   text-shadow: 0px 0px 1.5rem var(--highlightColor);
@@ -203,4 +222,27 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+}
+@media (max-width: 600px) {
+  .ProjectSection {
+    grid-template-areas:
+      '⭐ ⭐ ⭐ ⭐'
+      '⭐ ⭐ ⭐ ⭐'
+      'a a b b'
+      'c c h h'
+      'i i j j';
+  }
+  .ProjectCardsMain {
+    flex-direction: column;
+    align-items: center;
+  }
+  .ProjectImgContainer {
+    width: 80%;
+  }
+  .ProjectImg {
+    height: 90%;
+  }
+  .MainCardRight {
+    width: 100%;
+  }
 }
