--- a/src/pages/AboutPage/AboutPage.module.css
+++ b/src/pages/AboutPage/AboutPage.module.css
@@ -18,6 +18,11 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  width: 100vw;
+  overflow: hidden;
+}
+.AboutMain::-webkit-scrollbar {
+  display: none;
 }
 .AboutSection {
   display: flex;
@@ -62,6 +67,7 @@
   color: var(--opacityHighlight);
   /* text-shadow: 0px 0px 1rem var(--accentColor); */
   animation: blinking 1s forwards;
+  animation-delay: 2.1s;
   letter-spacing: 0.25rem;
   width: 100%;
 }
